# sd_proxy

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/sd_proxy/: __main__.py  main.py  xmltv.py
